--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="general_container">
 
             <div class="login-register_container">
-                <!-- Crear cuenta nueva -->
+                <!-- CREAR NUEVA CUENTA -->
                 <div class="register_container">
                     <h2>Bienvenido a Surance</h2>
                     <p>Si aún no tienes tu cuenta, puedes registrarte fácilmente  para empezar a usar tu propia billetera virtual</p>
                     <button id="btn_register">Crear cuenta</button>
                 </div>
-                <!-- Iniciar sesión con cuenta existente -->
+                <!-- INICIAR SESIÓN CON CUENTA EXISTENTE -->
                 <div class="login_container">
                     <h2>Bienvenido a Surance</h2>
                     <p>Si ya posees una cueta, puedes iniciar sesión e ingresar a tu billetera virtual</p>
@@ -32,7 +32,7 @@
             </div>
 
             <div class="forms_containers">     
-                <!-- Formulario de inisio de sesión -->
+                <!-- FORMULARIO DE INISIO DE SSESIÓN -->
                 <form action="./home.html" class="login_form">
                     <h2>Inicia sesión en Surance</h2>
                     <i class='bx bxs-user' style='color:#7f5a83' ></i>
@@ -41,7 +41,7 @@
                     <input type="password" placeholder="Contraseña" required>
                     <button>Iniciar sesión</button>
                 </form>           
-                <!-- formulario de registro -->
+                <!-- FORMULARIO DE REGISTRO -->
                 <form action="./home.html" class="register_form">
                     <h2>Registrate en Surance</h2>
                     <input type="text" placeholder="Nombre completo" required>
