--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="./styles/menu_nav.css">
     <link rel="stylesheet" href="styles/home.css">
+	<link rel="shortcut icon" href="./Images/favicon.ico" type="image/x-icon">
 
     <title>Surance</title>
 </head>
@@ -23,8 +24,8 @@
 			<li><a href="expenses.html"><i class='bx bx-credit-card icon'></i> Egresos</a></li>
 			<li class="divider" data-text="Ahorros">Ahorros</li>
 			<li><a href="goals.html"><i class='bx bxs-coin-stack icon' ></i> Plan de Ahorro</a></li>
-			<li class="divider" data-text="Configuración">Configuración</li>
-			<li><a href="settings.html"><i class='bx bxs-cog icon' ></i> Configuración</a></li>
+			<li class="divider" data-text="Cuenta">Configuración</li>
+			<li><a href="account.html"><i class='bx bxs-cog icon' ></i> Cuenta</a></li>
 		</ul>
 	</section>
 	<!-- SIDEBAR -->
@@ -43,8 +44,7 @@
 			<div class="profile">
 				<img src="https://www.elcolombiano.com/binrepository/841x562/0c0/0d0/none/11101/UPMB/40305366_40305366_20220713144007.jpg" alt="">
 				<ul class="profile-link">
-					<li><a href="#"><i class='bx bxs-user-circle icon' ></i> Cuenta</a></li>
-					<li><a href="#"><i class='bx bxs-cog' ></i> Configuración</a></li>
+					<li><a href="./account.html"><i class='bx bxs-user-circle icon' ></i> Cuenta</a></li>
 					<li><a href="./index.html"><i class='bx bxs-log-out-circle' ></i> Cerrar Sesión</a></li>
 				</ul>
 			</div>
@@ -109,7 +109,7 @@
 			<div class="history">
 				<div class="incomes card">
 					<div class="head">
-						<h3>Resumen Ingresos</h3>
+						<h3>Ingresos Recientes</h3>
 					</div>
 					<table>
 						<thead>
@@ -139,7 +139,7 @@
 
 				<div class="expenses card">
 					<div class="head">
-						<h3>Resumen Egresos</h3>
+						<h3>Egresos Recientes</h3>
 					</div>
 					<div id="history-container">
 						<table>
