boton eliminar para incomes y expenses

--- a/expenses.html
+++ b/expenses.html
@@ -92,7 +92,7 @@
 
 						<div class="position_register">
 							<span class="details_input">Descripción</span>
-							<input type="text" placeholder="Opcional" maxlength="30">
+							<input type="text" placeholder="Ingrese una Descripción" maxlength="30">
 						</div>
 
 
@@ -129,6 +129,7 @@
 									<th>Fecha</th>
 									<th>Categoría</th>
 									<th>Descripción</th>
+									<th></th>
 								</tr>
 							</thead>
 							<tbody>
@@ -137,285 +138,9 @@
 									<td>15/04/2022</td>
 									<td>Alimento</td>
 									<td>Zanahoria y papa </td>
+									<td><button class="btn_row_delete" type="submit">Eliminar</button></td>
 								</tr>
-								<tr>
-									<td>100.000</td>
-									<td>15/04/2022</td>
-									<td>Prestamo</td>
-									<td>Prestamo a cliente</td>
-								</tr>
-								<tr>
-									<td>100.000</td>
-									<td>15/04/2022</td>
-									<td>Prestamo</td>
-									<td>Prestamo a cliente</td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Venta</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Venta</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Venta</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Venta</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Venta</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Venta</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Venta</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Venta</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Venta</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
-								<tr>
-									<td>60.000.000</td>
-									<td>15/04/2022</td>
-									<td>Compra</td>
-									<td>Compra de carro </td>
-								</tr>
+								
 							</tbody>
 
 						</table>
