--- a/incomes.html
+++ b/incomes.html
@@ -93,7 +93,7 @@
 
 						<div class="position_register">
 							<span class="details_input">Descripción</span>
-							<input type="text" placeholder="Opcional" maxlength="30">
+							<input type="text" placeholder="Ingrese una Descripción" maxlength="30" required>
 						</div>
 
 
@@ -130,9 +130,17 @@
 									<th>Fecha</th>
 									<th>Categoría</th>
 									<th>Descripción</th>
+									<th></th>
 								</tr>
 							</thead>
 							<tbody>
+								<tr>
+									<td>20.000</td>
+									<td>15/04/2022</td>
+									<td>Alimento</td>
+									<td>Zanahoria y papa </td>
+									<td><button class="btn_row_delete" type="submit">Eliminar</button></td>
+								</tr>
 							</tbody>
 
 						</table>
