enlace de Home con backend solo para Incomes y Goals

--- a/home.html
+++ b/home.html
@@ -85,23 +85,9 @@
 								<h3>Metas</h3>
 							</div>
 						</div>
-						<ul>
-							<li>
-								<h3>Nombre Meta 1</h3>
-								<span class="progress" data-value="40%"></span>
-								<span class="label">40%</span>
-							</li>
-							<li>
-								<h3>Nombre Meta 2</h3>
-								<span class="progress" data-value="70%"></span>
-								<span class="label">70%</span>
-							</li>
-							<li>
-								<h3>Nombre Meta 3</h3>
-								<span class="progress" data-value="10%"></span>
-								<span class="label">10%</span>
-							</li>
-						</ul>
+						<!--Metas-->
+						<ul></ul>
+						<!--Fin de Metas-->
 					</div>
 				</div>
 			</div>
@@ -118,22 +104,7 @@
 								<th>Descripción</th>
 							</tr>
 						</thead>
-						<tr>
-							<td>$60.000.000</td>
-							<td>Venta de carro</td>
-						</tr>
-						<tr>
-							<td>$100.00</td>
-							<td>Banco</td>
-						</tr>
-						<tr>
-							<td>$100.00</td>
-							<td>Quincena</td>
-						</tr>
-						<tr>
-							<td>$100.00</td>
-							<td>Venta de carro</td>
-						</tr>
+						<tbody></tbody>
 					</table>
 				</div>
 
@@ -149,6 +120,7 @@
 									<th>Descripción</th>
 								</tr>
 							</thead>
+							<tbody></tbody>
 							<tr>
 								<td>$60.000.000</td>
 								<td>Compra de carro</td>
